fix: hard to see name in header in light mode

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -34,7 +34,7 @@ body {
 
 /* HEADER STYLES */
 .unscrolled-header {
-  @apply  [&>a>h1]:text-black [&>nav>div>a]:text-black [&>a>h1]:dark:text-white [&>nav>div>a]:dark:text-white 
+  @apply [&>a>h1]:text-black [&>nav>div>a]:text-black [&>a>h1]:dark:text-white [&>nav>div>a]:dark:text-white [&>div>a]:text-black
 }
 .unscrolled-header-bg {
   @apply bg-transparent backdrop-blur-sm
